--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,6 +1,6 @@
 @inproceedings{uchoacoupling,
   title={Do Coupling Metrics Help Characterize Critical Components in Component-based SPL? An Empirical Study},
-  author={Uch{\^o}a, Anderson and Fernandes, Eduardo and Bibiano, Ana Carla and Garcia, Alessandro},
+  author={Uchôa, Anderson and Fernandes, Eduardo and Bibiano, Ana Carla and Garcia, Alessandro},
   booktitle={5th Workshop on Software Visualization, Evolution and Maintenance (VEM)},
   pages={1--8},
   year={2017}
@@ -8,10 +8,10 @@
 
 
 @Inbook{Uchôa2017,
-author="Uch{\^o}a, Anderson G.
+author="Uchôa, Anderson G.
 and Bezerra, Carla I. M.
 and Machado, Ivan C.
-and Monteiro, Jos{\'e} Maria
+and Monteiro, José Maria
 and Andrade, Rossana M. C.",
 editor="Botterweck, Goetz
 and Werner, Claudia",
@@ -28,10 +28,10 @@ url="https://doi.org/10.1007/978-3-319-56856-0_5"
 }
 
 @Inbook{Uchôa2017,
-author="Uch{\^o}a, Anderson G.
+author="Uchôa, Anderson G.
 and Lima, Luan P.
 and Bezerra, Carla I. M.
-and Monteiro, Jos{\'e} Maria
+and Monteiro, José Maria
 and Andrade, Rossana M. C.",
 editor="Botterweck, Goetz
 and Werner, Claudia",
