--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -7,7 +7,7 @@
 }
 
 
-@inproceedings{Uchôa2017,
+@inproceedings{reminderuchoa2017,
 author="Uchôa, Anderson G.
 and Bezerra, Carla I. M.
 and Machado, Ivan C.
@@ -27,7 +27,7 @@ doi="10.1007/978-3-319-56856-0_5",
 url="https://doi.org/10.1007/978-3-319-56856-0_5"
 }
 
-@inproceedings{Uchôa2017,
+@inproceedings{dymmeruchoa2017,
 author="Uchôa, Anderson G.
 and Lima, Luan P.
 and Bezerra, Carla I. M.
