--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -47,3 +47,13 @@ doi="10.1007/978-3-319-56856-0_12",
 url="https://doi.org/10.1007/978-3-319-56856-0_12"
 }
 
+@inproceedings{uchoamodelagem,
+  title={Modelagem de Requisitos Nao-Funcionais em Modelos de Features de Linha de Produto de Software Dinâmicas},
+  author={Uchôa, Anderson G and Bezerra, Carla IM},
+  booktitle={Proceedings of the 3rd Latin-American School on Software Engineering (ELA-ES)},
+  pages={73--76},
+  year={2016},
+  abstract={This paper proposes a representation of non-functional requirements and context requirements for the feature model of DSPLs. The representation extends the FODA notation of the feature model. The proposal will be implemented in DyMMer tool that already provides representation of features and context adaptations in a single feature model.}
+
+}
+
