--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -3,7 +3,8 @@
   author={Uchôa, Anderson and Fernandes, Eduardo and Bibiano, Ana Carla and Garcia, Alessandro},
   booktitle={5th Workshop on Software Visualization, Evolution and Maintenance (VEM)},
   pages={1--8},
-  year={2017}
+  year={2017},
+  abstract={In component-based software product lines (SPL), each component has to encapsulate features, restrict data access, and be replaceable. For critical components, with multiple features and dependencies, these criteria are fundamental for flexible product configuration. Previous work assume that coupling metrics help characterize critical components, but we lack empirical evidence for that assumption. By characterizing critical components, we could help developers identify components that require careful maintenance and evolution. This paper relies on five well-known coupling metrics to compose a strategy for characterizing critical components in component-based SPLs. Our results suggest reasonable strategy’s accuracy but the need for using additional metrics.}	
 }
 
 
@@ -54,6 +55,5 @@ url="https://doi.org/10.1007/978-3-319-56856-0_12"
   pages={73--76},
   year={2016},
   abstract={This paper proposes a representation of non-functional requirements and context requirements for the feature model of DSPLs. The representation extends the FODA notation of the feature model. The proposal will be implemented in DyMMer tool that already provides representation of features and context adaptations in a single feature model.}
-
-}
+     }
 
