--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -54,6 +54,7 @@ url="anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
   author={Uchôa, Anderson G and Bezerra, Carla IM},
   booktitle={Proceedings of the 3rd Latin-American School on Software Engineering (ELA-ES)},
   pages={73--76},
+  note={<font color="red">Best Paper Award!</font>},
   year={2016},
   abstract={This paper proposes a representation of non-functional requirements and context requirements for the feature model of DSPLs. The   representation extends the FODA notation of the feature model. The proposal will be implemented in DyMMer tool that already provides representation of features and context adaptations in a single feature model.},
  url={anderson-uchoa.github.io/publications/UchoaPMMC17.pdf}
