--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -5,7 +5,7 @@
   pages={1--8},
   year={2017},
   abstract={In component-based software product lines (SPL), each component has to encapsulate features, restrict data access, and be replaceable. For critical components, with multiple features and dependencies, these criteria are fundamental for flexible product configuration. Previous work assume that coupling metrics help characterize critical components, but we lack empirical evidence for that assumption. By characterizing critical components, we could help developers identify components that require careful maintenance and evolution. This paper relies on five well-known coupling metrics to compose a strategy for characterizing critical components in component-based SPLs. Our results suggest reasonable strategy’s accuracy but the need for using additional metrics.},
-url={anderson-uchoa.github.io/publications/UchoaFBA17.pdf}	
+url={https://anderson-uchoa.github.io/publications/UchoaFBA17.pdf}	
 }
 
 
@@ -26,7 +26,7 @@ pages="65--73",
 abstract="This paper presents a systematic approach to modeling NFPs in DSPL feature models. In our proposed approach, feature models are annotated with the representation of NFPs, rules for the activation and deactivation of features, constraints between NFPs and features, and context adaptation scenarios. To evaluate the applicability of the proposed approach we carried out an empirical evaluation. The approach yielded good results at identifying NFPs in DSPLs.",
 isbn="978-3-319-56856-0",
 doi="10.1007/978-3-319-56856-0_5",
-url="anderson-uchoa.github.io/publications/UchoaMMMC17.pdf"
+url="https://anderson-uchoa.github.io/publications/UchoaMMMC17.pdf"
 }
 
 @inproceedings{UchoaPMMC17,
@@ -46,7 +46,7 @@ pages="175--183",
 abstract="In Software Product Lines (SPLs), the modeling of non-functional properties (NFPs) and context adaptation scenarios are important activities, once they make possible the identification of interdependencies constraints between functional requirements (FR) and NFP, according to a specific adaptation context scenario. However, there are few tools to help domain engineers to represent NFPs and context adaptation scenarios. To deal with this problem, we propose DyMMer-NFP, an extension of the DyMMer tool to support the modeling of NFPs and multiple contextual adaptation scenarios in feature models. DyMMer-NFP uses a catalog with 39 NFPs. Each NFP in this catalog were mapped according to each quality characteristic and sub-characteristics presented in the ISO/IEC 25010 SQuaRE product quality model. To specify the interdependencies between NFPs and features, DyMMer-NFP has used the concept of contribution links. In order to make it easier to evaluate DyMMer-NFP two datasets, called AFFOgaTO and ESPREssO, were made available for free.",
 isbn="978-3-319-56856-0",
 doi="10.1007/978-3-319-56856-0_12",
-url="anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
+url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
 }
 
 @inproceedings{UchoaM16,
@@ -57,6 +57,6 @@ url="anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
   note={<font color="red">Best Paper Award!</font>},
   year={2016},
   abstract={This paper proposes a representation of non-functional requirements and context requirements for the feature model of DSPLs. The   representation extends the FODA notation of the feature model. The proposal will be implemented in DyMMer tool that already provides representation of features and context adaptations in a single feature model.},
- url={anderson-uchoa.github.io/publications/UchoaPMMC17.pdf}
+ url={https://anderson-uchoa.github.io/publications/UchoaM16.pdf}
 }
 
