--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -50,7 +50,7 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
 }
 
 @inproceedings{UchoaM16,
-  title={Modelagem de Requisitos Nao-Funcionais em Modelos de Features de Linha de Produto de Software Dinâmicas},
+  title={Modelagem de Requisitos Não-Funcionais em Modelos de Features de Linha de Produto de Software Dinâmicas},
   author={Uchôa, Anderson G and Bezerra, Carla IM},
   booktitle={Proceedings of the 3rd Latin-American School on Software Engineering (ELA-ES)},
   pages={73--76},
