--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,4 +1,4 @@
-@article{{UchoaFBA17,
+@article{{UchoaLRDAPAAA18,
   title={VazaDengue: An Information System for Preventing and Combating Mosquito-Borne Diseases with Social Networks},
   author={Leonardo Sousa and Rafael de Mello and Diego Cedrim and Alessandro Garcia and Paolo Missier and
 Anderson Uchôa and Anderson Oliveira and Alexander Romanovsky},
