--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -10,6 +10,16 @@ title={VazaDengue: An Information System for Preventing and Combating Mosquito-B
 }
 
 
+@inproceedings{FerreiraIEDAAAJFGCBR18,
+  title={The Buggy Side of Code Refactoring: Understanding the Relationship between Refactorings and Bugs},
+  author={Isabella Ferreira, Eduardo Fernandes, Diego Cedrim, Anderson Uchôa, Ana Carla Bibiano, Alessandro Garcia, João Lucas Correia, Filipe Santos, Gabriel Nunes, Caio Barbosa, Baldoino Fonseca, and Rafael de Mello.},
+  booktitle={5th Workshop on Software Visualization, Evolution and Maintenance (VEM)},
+  pages={1--8},
+  year={2018},
+  abstract={Code refactoring is widely practiced by software developers. There is an explicit assumption that code refactoring improves the structural quality of a software project, thereby also reducing its bug proneness. However, refactoring is often applied with different purposes in practice. Depending on the complexity of certain refactorings, developers might unconsciously make the source code more susceptible to have bugs. In this paper, we present a longitudinal study of 5 Java open source projects, where 20,689 refactorings, and 1,033 bug reports were analyzed. We found that many bugs are introduced in the refactored code as soon as the first immediate change is made on it. Furthermore, code elements affected by refactorings performed in conjunction with other changes are more prone to have bugs than those affected by pure refactorings.},
+url={https://anderson-uchoa.github.io/publications/UchoaFBA17.pdf}	
+}
+
 
 
 @inproceedings{UchoaFBA17,
