--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -12,7 +12,7 @@ title={VazaDengue: An Information System for Preventing and Combating Mosquito-B
 
 @inproceedings{FerreiraIEDAAAJFGCBR18,
   title={The Buggy Side of Code Refactoring: Understanding the Relationship between Refactorings and Bugs},
-  author={Isabella Ferreira, Eduardo Fernandes, Diego Cedrim, Anderson Uchôa, Ana Carla Bibiano, Alessandro Garcia, João Lucas Correia, Filipe Santos, Gabriel Nunes, Caio Barbosa, Baldoino Fonseca, and Rafael de Mello.},
+  author={Isabella Ferreira and Eduardo Fernandes and Diego Cedrim and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia and João Lucas Correia and Filipe Santos and Gabriel Nunes and Caio Barbosa and Baldoino Fonseca and Rafael de Mello.},
   booktitle={Proceedings of the 40th International Conference on Software Engineering (ICSE'18), Poster Track, Gothenburg, Sweden, May 2018.},
   pages={1--8},
  note={<font color="red">poster pre-accepted</font>},
