--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -5,7 +5,7 @@ volume = "75",
 pages = "26 - 42",
 year = "2018",
 issn = "0306-4379",
-doi = "https://doi.org/10.1016/j.is.2018.02.003",
+doi = "10.1016/j.is.2018.02.003",
 url = "https://anderson-uchoa.github.io/publications/SousaLRDAPAAA18.pdf",
 author = "Leonardo Sousa and Rafael de Mello and Diego Cedrim and Alessandro Garcia and Paolo Missier and Anderson Uchôa and Anderson Oliveira and Alexander Romanovsky",
 keywords = "Dengue, Mosquito, Social media, Surveillance, Tweets",
