--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -14,7 +14,7 @@ abstract = "Dengue is a disease transmitted by the Aedes Aegypti mosquito, which
 
 
 @inproceedings{FerreiraIEDAAAJFGCBR18,
-  title={The Buggy Side of Code Refactoring: Understanding the Relationship between Refactorings and Bugs},
+  title={Poster: The Buggy Side of Code Refactoring: Understanding the Relationship between Refactorings and Bugs},
   author={Isabella Ferreira and Eduardo Fernandes and Diego Cedrim and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia and João Lucas Correia and Filipe Santos and Gabriel Nunes and Caio Barbosa and Baldoino Fonseca and Rafael de Mello},
 url = "https://anderson-uchoa.github.io/publications/FerreiraEDA18.pdf",
   booktitle={Proceedings of the 40th International Conference on Software Engineering (ICSE'18), Poster Track, Gothenburg, Sweden, May 2018},
