--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -28,7 +28,7 @@ url = "https://anderson-uchoa.github.io/publications/FerreiraEDA18.pdf",
 @inproceedings{UchoaFBA17,
   title={Do Coupling Metrics Help Characterize Critical Components in Component-based SPL? An Empirical Study},
   author={Uchôa, Anderson and Fernandes, Eduardo and Bibiano, Ana Carla and Garcia, Alessandro},
-  booktitle={Proceedings of the 5th Workshop on Software Visualization, Evolution and Maintenance (VEM)},
+  booktitle={Proceedings of the 5th Workshop on Software Visualization, Evolution and Maintenance (VEM'17), Fortaleza, Brazil, September 2017.},
   pages={36--43},
   year={2017},
   abstract={In component-based software product lines (SPL), each component has to encapsulate features, restrict data access, and be replaceable. For critical components, with multiple features and dependencies, these criteria are fundamental for flexible product configuration. Previous work assume that coupling metrics help characterize critical components, but we lack empirical evidence for that assumption. By characterizing critical components, we could help developers identify components that require careful maintenance and evolution. This paper relies on five well-known coupling metrics to compose a strategy for characterizing critical components in component-based SPLs. Our results suggest reasonable strategy’s accuracy but the need for using additional metrics.},
