--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -14,15 +14,22 @@ abstract = "Dengue is a disease transmitted by the Aedes Aegypti mosquito, which
 
 
 @inproceedings{FerreiraIEDAAAJFGCBR18,
-  title={Poster: The Buggy Side of Code Refactoring: Understanding the Relationship between Refactorings and Bugs},
-  author={Isabella Ferreira and Eduardo Fernandes and Diego Cedrim and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia and João Lucas Correia and Filipe Santos and Gabriel Nunes and Caio Barbosa and Baldoino Fonseca and Rafael de Mello},
-url = "https://anderson-uchoa.github.io/publications/FerreiraEDA18.pdf",
-  booktitle={Proceedings of the 40th International Conference on Software Engineering (ICSE'18), Poster Track, Gothenburg, Sweden, May 2018},
-  pages={1--8},
-  year={2018},
-  abstract={Code refactoring is widely practiced by software developers. There is an explicit assumption that code refactoring improves the structural quality of a software project, thereby also reducing its bug proneness. However, refactoring is often applied with different purposes in practice. Depending on the complexity of certain refactorings, developers might unconsciously make the source code more susceptible to have bugs. In this paper, we present a longitudinal study of 5 Java open source projects, where 20,689 refactorings, and 1,033 bug reports were analyzed. We found that many bugs are introduced in the refactored code as soon as the first immediate change is made on it. Furthermore, code elements affected by refactorings performed in conjunction with other changes are more prone to have bugs than those affected by pure refactorings.}
+ author = {Ferreira, Isabella and Fernandes, Eduardo and Cedrim, Diego and Uch\^{o}a, Anderson and Bibiano, Ana Carla and Garcia, Alessandro and Correia, Jo\~{a}o Lucas and Santos, Filipe and Nunes, Gabriel and Barbosa, Caio and Fonseca, Baldoino and de Mello, Rafael},
+ title = {The Buggy Side of Code Refactoring: Understanding the Relationship Between Refactorings and Bugs},
+ booktitle = {Proceedings of the 40th International Conference on Software Engineering: Companion Proceeedings},
+ series = {ICSE '18},
+ year = {2018},
+ isbn = {978-1-4503-5663-3},
+ location = {Gothenburg, Sweden},
+ pages = {406--407},
+ numpages = {2},
+ url = {https://anderson-uchoa.github.io/publications/FerreiraEDA18.pdf},
+doi = {10.1145/3183440.3195030},
+ acmid = {3195030},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {bug proneness, empirical study, refactoring, software maintenance},
 }
-
 
 
 @inproceedings{UchoaFBA17,
