--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -9,6 +9,7 @@
  location = {Gothenburg, Sweden},
  pages = {406--407},
  numpages = {2},
+abstract={Code refactoring is widely practiced by software developers. There is an explicit assumption that code refactoring improves the structural quality of a software project, thereby also reducing its bug proneness. However, refactoring is often applied with different purposes in practice. Depending on the complexity of certain refactorings, developers might unconsciously make the source code more susceptible to have bugs. In this paper, we present a longitudinal study of 5 Java open source projects, where 20,689 refactorings, and 1,033 bug reports were analyzed. We found that many bugs are introduced in the refactored code as soon as the first immediate change is made on it. Furthermore, code elements affected by refactorings performed in conjunction with other changes are more prone to have bugs than those affected by pure refactorings.},
  url = {https://anderson-uchoa.github.io/publications/FerreiraEDA18.pdf},
 doi = {10.1145/3183440.3195030},
  acmid = {3195030},
