--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,4 +1,17 @@
 
+
+@inproceedings{fernandes2019vazazika,
+  title={VazaZika: A Software Platform for Surveillance and Control of Mosquito-Borne Diseases},
+  author={Eduardo Fernandes and Anderson Uchôa and Leonardo Sousa and Anderson Oliveira and Rafael de Mello and Luiz Paulo Barroca and Diogo Carvalho and Alessandro Garcia and Baldoino Fonseca and Leopoldo Teixeira},
+  booktitle={Information Technology-New Generations},
+series = {ITNG'19},
+  pages={565--570},
+  year={2019},
+note = {<font color="red">Accepted for Publication (to appear)</font>},
+abstract={Mosquito-borne diseases negatively affect the economically emerging countries. Nevertheless, the current public healthcare solutions are insufficient to support disease surveillance and control. The citizen engagement in reporting mosquito breeding sites is hard to achieve but essential in preventing disease outbreaks. This paper introduces the VazaZika platform aimed to support the surveillance and control of mosquito-borne diseases. This platform evolves the VazaDengue legacy platform with gamification, thereby adding game elements and rules. We aim to make enjoyable and challenging to report mosquito breeding sites via VazaZika. Citizens are continuously rewarded as they perform tasks in the platform. They progress in levels that enable new tasks and jump in rankings according to the citizens' location. Citizens can also join teams for engaging with challenges, which helps developing a sense of belonging and connection against the spread of diseases. This paper reports the process of gamifying VazaDengue, the platform user interface and its conceptual model, aimed to support reuse.},
+  publisher={Springer}
+}
+
 @inproceedings{FerreiraIEDAAAJFGCBR18,
  author = {Ferreira, Isabella and Fernandes, Eduardo and Cedrim, Diego and Uch{\^{o}}a, Anderson and Bibiano, Ana Carla and Garcia, Alessandro and Correia, Jo{\~{a}}o Lucas and Santos, Filipe and Nunes, Gabriel and Barbosa, Caio and Fonseca, Baldoino and de Mello, Rafael},
  title = {The Buggy Side of Code Refactoring: Understanding the Relationship Between Refactorings and Bugs},
