--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -13,7 +13,7 @@ abstract={Mosquito-borne diseases negatively affect the economically emerging co
 }
 
 @inproceedings{FerreiraIEDAAAJFGCBR18,
- author = {Ferreira, Isabella and Fernandes, Eduardo and Cedrim, Diego and Uch{\^{o}}a, Anderson and Bibiano, Ana Carla and Garcia, Alessandro and Correia, Jo{\~{a}}o Lucas and Santos, Filipe and Nunes, Gabriel and Barbosa, Caio and Fonseca, Baldoino and de Mello, Rafael},
+ author = {Ferreira, Isabella and Fernandes, Eduardo and Cedrim, Diego and Uchôa, Anderson and Bibiano, Ana Carla and Garcia, Alessandro and Correia, João Lucas and Santos, Filipe and Nunes, Gabriel and Barbosa, Caio and Fonseca, Baldoino and de Mello, Rafael},
  title = {The Buggy Side of Code Refactoring: Understanding the Relationship Between Refactorings and Bugs},
  booktitle = {Proceedings of the 40th International Conference on Software Engineering: Companion Proceeedings},
  series = {ICSE '18},
