--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -104,3 +104,12 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
  url={https://anderson-uchoa.github.io/publications/UchoaM16.pdf}
 }
 
+@bscthesis{UchoaR16,
+  author       = {Anderson Gonçalves Uchôa}, 
+  title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
+  school       = {Federal University of Ceará (UFC)},
+  year         = {2016},
+  url       = {https://anderson-uchoa.github.io/publications/UchoaR16.pdf}
+}
+
+
