--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -104,7 +104,7 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
  url={https://anderson-uchoa.github.io/publications/UchoaM16.pdf}
 }
 
-@bscthesis{UchoaR16,
+@phdthesis{UchoaR16,
   author       = {Anderson Gonçalves Uchôa}, 
   title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
   school       = {Federal University of Ceará (UFC)},
