--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -107,7 +107,8 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
 @phdthesis{UchoaR16,
   author       = {Anderson Gonçalves Uchôa}, 
   title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
-  school       = {Federal University of Ceará (UFC)},
+  school       = {Federal University of Ceará (UFC)},	
+  type = {Bachelor’s Thesis},
   year         = {2016},
   url       = {https://anderson-uchoa.github.io/publications/UchoaR16.pdf}
 }
