--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -107,10 +107,10 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
 @misc{UchoaR16,
   author       = {Anderson Gonçalves Uchôa}, 
   title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
-  school       = {Federal University of Ceará (UFC)},	
-  type = {BSc Thesis},
+  note       = {BSc Thesis, Federal University of Ceará (UFC), Quixadá Brazil},
   year         = {2016},
   url       = {https://anderson-uchoa.github.io/publications/UchoaR16.pdf}
 }
+
 
 
