--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -113,4 +113,22 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
 }
 
 
+@monography{UchoaR16,
+  author       = {Anderson Gonçalves Uchôa}, 
+  title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
+  school       = {Federal University of Ceará (UFC), Quixadá Brazil},
+  type = {BSc Thesis},
+  year         = {2016},
+  url       = {https://anderson-uchoa.github.io/publications/UchoaR16.pdf}
+}
+
+
+@monograph{UchoaR16,
+  author       = {Anderson Gonçalves Uchôa}, 
+  title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
+  school       = {Federal University of Ceará (UFC), Quixadá Brazil},
+  type = {BSc Thesis},
+  year         = {2016},
+  url       = {https://anderson-uchoa.github.io/publications/UchoaR16.pdf}
+}
 
