--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -105,14 +105,13 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
 }
 
 
-
-@monography{UchoaR16,
+@misc{UchoaR16,
   author       = {Anderson Gonçalves Uchôa}, 
   title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
-  school       = {Federal University of Ceará (UFC), Quixadá Brazil},
-  type = {BSc Thesis},
+  note       = {BSc Thesis, Federal University of Ceará (UFC)},
   year         = {2016},
   url       = {https://anderson-uchoa.github.io/publications/UchoaR16.pdf}
 }
+
 
 
