--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,12 @@
+@inproceedings{JulioCA19,
+ title={Analyzing the Impact of Inter-smell Relations on Software Maintainability: A Empirical Study with Software Product Lines},
+author={Júlio Martins and Carla Bezerra and Anderson Uchôa},
+  booktitle={Proceedings of the 15th Brazilian Symposium on Information Systems (SBSI)},
+  pages={1--8},
+  note = {<font color="red">Accepted for Publication (to appear)</font>},
+  year={2019}
+}
+
 
 
 @inproceedings{FernandesALARLDABL19,
