--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,5 +1,5 @@
 @inproceedings{JulioCA19,
- title={Analyzing the Impact of Inter-smell Relations on Software Maintainability: A Empirical Study with Software Product Lines},
+ title={Analyzing the Impact of Inter-smell Relations on Software Maintainability: An Empirical Study with Software Product Lines},
 author={Júlio Martins and Carla Bezerra and Anderson Uchôa},
   booktitle={Proceedings of the 15th Brazilian Symposium on Information Systems (SBSI)},
   pages={1--8},
