--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,24 @@
+
+@inproceedings{deMelloARDBAF19,
+  title="{Exploring the Theory of Social Representations: A Preliminary Study of Code Smell Identification}",
+  author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Daniel Tenorio and Baldoino Fonseca and Alessandro Garcia and Fernanda de Mello},
+  booktitle={Proceedings of the 12th International Workshop on Cooperative and Human Aspects of Software Engineering (CHASE)},
+  pages={1--8},
+note = {<font color="red">Accepted for Publication (to appear)</font>},
+  year={2019}
+}
+
+
+@inproceedings{UchoaEBRCGAL19,
+  title="{On Gamifying an Existing Healthcare System: Method, Conceptual Model and Evaluation}",
+  author={Anderson Uchôa and Eduardo Fernandes and Baldoino Fonseca and Rafael de Mello and Caio Barbosa and Gabriel Nunes and Alessandro Garcia and Leopoldo Teixeira},
+  booktitle={Proceedings of the 1st International Workshop on Software Engineering for Healthcare (SEH)},
+  pages={1--8},
+note = {<font color="red">Accepted for Publication (to appear)</font>},
+  year={2019}
+}
+
+
 @inproceedings{JulioCA19,
  title={Analyzing the Impact of Inter-smell Relations on Software Maintainability: An Empirical Study with Software Product Lines},
 author={Júlio Martins and Carla Bezerra and Anderson Uchôa},
@@ -6,7 +27,6 @@ author={Júlio Martins and Carla Bezerra and Anderson Uchôa},
   note = {<font color="red">Accepted for Publication (to appear)</font>},
   year={2019}
 }
-
 
 
 @inproceedings{FernandesALARLDABL19,
